# simple-transformer

./: .gitignore  model.pt  pyproject.toml  query.py  scripts.py  simple-transformer.ipynb  sine-wave-generation.ipynb  train.py
simple_transformer/: bigram_model.py  data.py  letter_tokeniser.py  lm.py  model.py  tokeniser.py  trainer.py  transformer_model.py  word_tokeniser.py
tests/: test_bigram_model.py  test_data.py  test_letter_tokeniser.py  test_lm.py  test_model.py  test_tokeniser.py  test_transformer_model.py  test_word_tokeniser.py
