[tool.poetry]
name = "simple-transformer"
version = "0.1.0"
description = "Simple transformer and LM experiments"
authors = ["Rohan Mitchell <rohan@rohanmitchell.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simple_transformer"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.12.1"
numpy = "^1.23.5"
nltk = "^3.8"

[tool.poetry.group.dev.dependencies]
unittest = "^0.0"
jupyter = "^1.0.0"

[tool.poetry.scripts]
test = "scripts:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
