[tool.poetry]
name = "simple-transformer"
version = "0.1.0"
description = "Simple transformer and LM experiments"
authors = ["Rohan Mitchell <rohan@rohanmitchell.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simple_transformer"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.13.1"
numpy = "^1.23.5"
nltk = "^3.8"
wandb = "^0.13.6"
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
unittest = "^0.0"
jupyter = "^1.0.0"
mypy = "^0.991"

[tool.poetry.scripts]
train = "scripts:train"
types = "scripts:types"
test = "scripts:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "nltk"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nltk.*"
ignore_missing_imports = true
